--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ body {
 
 .header-text {
     display: flex;
-    /* display: none; */
+
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -149,7 +149,7 @@ body {
 .fa-solid.fa-x.nav {
     position: absolute;
     right: 2rem;
-    top: 2rem;
+    top: 1rem;
     color: white;
     font-size: 24px;
 }
@@ -184,7 +184,7 @@ body {
     right: 0;
     background-color: #333A78;
     width: 100%;
-    opacity: 0.7;
+    opacity: 0.2;
     height: 100%;
 }
 
@@ -195,14 +195,16 @@ body {
     right: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 
 .nav-link {
     width: 100%;
-    height: 15%;
+    height: 25%;
     /* background-color: white; */
-    margin-top: 1rem;
+    margin-top: 0.3rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -214,26 +216,29 @@ body {
 .nav-link-overlay {
     width: 100%;
     height: 100%;
-    background-color: white;
+    /* background-color: white; */
     position: absolute;
-    opacity: 0.3;
+    opacity: 0.2;
+    background-color: #ACC3FF;
 }
 
 
 .nav-link-overlay:hover {
-    background-color: rgb(146, 144, 144);
     cursor: pointer;
+    opacity: 0.1;
+    
 }
 
-.over-nav-bar-overlay > .nav-link:nth-child(2) {
-    margin-top: 5rem;
+.over-nav-bar-overlay > .nav-link:nth-child(1) {
+    margin-top: 0rem;
 }
 
 .link {
-    font-size: 20px;
+    font-size: 15px;
     text-decoration: none;
     color: white;
     position: absolute;
+    font-weight: 300;
 }
 
 .home-body {
@@ -265,7 +270,7 @@ body {
     }
 
     .link {
-        font-size: 24px;
+        font-size: 21px;
         text-decoration: none;
         color: white;
         position: absolute;
@@ -279,5 +284,10 @@ body {
 
     .fa-solid.fa-x {
         top: 1.4rem;
+    }
+
+    .fa-solid.fa-x.nav {
+        top: 2.5rem;
+ 
     }
   }
