--- a/index.css
+++ b/index.css
@@ -193,7 +193,7 @@ body {
     position: absolute;
     top: 0;
     right: 0;
-    width: 100%;
+    width: 20%;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -244,6 +244,82 @@ body {
 .home-body {
     width: 100%;
     height: 60%;
+    overflow-y: scroll;
+    /* display: flex;
+    flex-direction: column;
+    align-items: center; */
+    
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+    
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 2px rgb(79, 100, 186); 
+    border-radius: 2px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    /* background: rgba(58, 73, 111, 0.25); */
+    border-radius: 5px;
+    background: rgba(58, 73, 111, 0.5);
+  }
+
+
+
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgba(58, 73, 111, 0.5);
+  }
+
+.body-result {
+    /* width: 50%;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20%; */
+
+    width: 100%;
+    /* border: 1px solid white; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 13%;
+    margin-top: 2px;
+}
+
+.body-link {
+    text-decoration: none;
+    color: white;
+    font-weight: 200;
+
+    width: 40%;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: rgba(58, 73, 111, 0.25);
+}
+
+.body-link:hover {
+    background: rgba(58, 73, 111, 0.5);
+}
+
+.overlay-text-form {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: blue;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 @media only screen and (min-width: 1600px) {
@@ -290,4 +366,21 @@ body {
         top: 2.5rem;
  
     }
+
+    .body-result{
+        height: 10%;
+        /* height: 200px; */
+    }
   }
+
+  
+@media only screen and (max-width: 500px) {
+    .text:nth-child(2) {
+        font-size: 13px;
+    }
+    .text:nth-child(1) {
+        font-size: 19px;
+      
+    }
+}
+
