--- a/index.css
+++ b/index.css
@@ -288,7 +288,9 @@ body {
 
     width: 100%;
     /* border: 1px solid white; */
-    display: flex;
+    /* display: flex; */
+    display: none;
+  
     justify-content: center;
     align-items: center;
     height: 13%;
@@ -302,6 +304,7 @@ body {
 
     width: 40%;
     display: flex;
+    /* display: 'none'; */
     height: 100%;
     justify-content: center;
     align-items: center;
