--- a/index.css
+++ b/index.css
@@ -385,5 +385,66 @@ body {
         font-size: 19px;
       
     }
+
+    .over-nav-bar-overlay {
+        width: 100%;
+
+    }
+
+    .header-form {
+        width: 65%;
+    }
+
+    .body-link {
+        text-decoration: none;
+        color: white;
+        font-weight: 200;
+        width: 95%;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        background: rgba(58, 73, 111, 0.25);
+    }
+
+    .form-input {
+        font-size: 15px;
+    }
 }
 
+
+@media only screen and (max-width: 450px) {
+
+
+    .text:nth-child(1) {
+        font-size: 16px;
+    }
+
+    .text:nth-child(2) {
+        font-size: 11px;
+    }
+}
+
+@media only screen and (max-width: 320px) {
+
+    .body-link {
+        text-decoration: none;
+        color: white;
+        font-weight: 200;
+        width: 95%;
+        display: flex;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+        background: rgba(58, 73, 111, 0.25);
+        font-size: 13px;
+    }
+
+    .text:nth-child(1) {
+        font-size: 12px;
+    }
+
+    .text:nth-child(2) {
+        font-size: 9px;
+    }
+}
